--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@
   --special-yellow: #f7e296;
   --special-green: #91c92f;
   --special-grey: #eaeaea;
+  --special-grey-medium: #dcdcdc;
+  --special-grey-light: #ebebeb;
+  --special-grey-paginator: #d9d9d9;
 
   --status-pink: #f6dada;
 }
@@ -86,31 +89,39 @@ img {
   cursor: pointer;
   border: transparent;
   font-family: inherit;
+  background-color: transparent;
+  outline: none;
 }
 .button--bg-yellow {
+  position: relative;
   font-size: 18px;
   line-height: 22px;
   font-weight: 800;
   text-transform: uppercase;
   letter-spacing: 2px;
-  background-color: transparent;
-  outline: none;
+  padding: 0px 20px;
+  z-index: 1;
 }
 .button--bg-yellow::before {
   content: '';
   position: absolute;
   z-index: -1;
   background-color: var(--special-yellow-dark);
-  padding: 4px 110px;
-  margin-top: 6px;
+  width: 100%;
+  left: 0;
+  right: 0;
+  top: 7px;
+  bottom: 7px;
+  transition: all .4s;
 }
 .button--bg-yellow:hover::before,
 .button--bg-yellow:focus::before {
-  padding: 20px 100px;
   margin: 0;
+  top: 0;
+  bottom: 0;
 }
 .button__span {
-  padding-left: 44px;
+  text-align: center;
 }
 .button__span:active {
   opacity: 0.3;
@@ -123,6 +134,13 @@ img {
   font-size: 47px;
   line-height: 58px;
   letter-spacing: 2px;
+}
+.title--medium {
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
 
 /* Header */
@@ -171,6 +189,33 @@ img {
 .main-navigation__input:focus {
   color: var(--basic-black);
   opacity: 1;
+  border-bottom: 2px solid var(--basic-black);
+}
+.main-navigation__button-form {
+  font-family: "Open Sans", Arial, sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 21px;
+  opacity: 0;
+  text-transform: uppercase;
+}
+.main-navigation__input:focus + .main-navigation__button-form {
+  border: 2px solid var(--basic-black);
+  opacity: 1;
+  background-color: transparent;
+}
+.main-navigation__input:focus + .main-navigation__button-form:hover,
+.main-navigation__input:focus + .main-navigation__button-form:focus {
+  border: 2px solid var(--basic-black);
+  opacity: 1;
+  color: var(--basic-white);
+  background-color: var(--basic-black);
+}
+.main-navigation__button-form:focus {
+  border: 2px solid var(--basic-black);
+  opacity: 1;
+  color: rgba(255, 255, 255, 0.3);
+  background-color: var(--basic-black);
 }
 .main-navigation__button {
   position: relative;
@@ -223,6 +268,7 @@ img {
   text-transform: uppercase;
   letter-spacing: 2px;
   color: var(--basic-black);
+  outline: none;
 }
 .main-navigation__button:hover,
 .main-navigation__button:focus,
@@ -250,6 +296,7 @@ img {
   font-size: 15px;
   line-height: 21px;
   color: var(--basic-black);
+  outline: none;
 }
 
 /* Main */
@@ -380,10 +427,11 @@ img {
 }
 .footer-navigation__button {
   position: relative;
+  font-weight: 300;
+  font-size: 15px;
   line-height: 21px;
   background-color: transparent;
-  color: var(--basic-white);
-  opacity: 0.7;
+  color: rgba(255, 255, 255, 0.7);
   outline: none;
 }
 .footer-navigation__button:hover,
@@ -524,4 +572,301 @@ img {
 }
 .modal__submit-button::before {
   background-color: var(--special-yellow);
+}
+
+/* Catalog */
+
+.main-navigation__container {
+  position: relative;
+}
+.main-navigation__container::before {
+  content: '';
+  position: absolute;
+  left: -20px;
+  background-repeat: no-repeat;
+  width: 13px;
+  height: 14px;
+  background-image: url("./img/user-black.svg");
+}
+.main-navigation__link {
+  color: var(--basic-black);
+}
+.main-navigation__button--login {
+  opacity: 0.3;
+}
+.page-catalog__list {
+  list-style: none;
+  display: flex;
+  justify-content: flex-start;
+}
+.breadcrumbs__item {
+  position: relative;
+  font-family: "Open Sans", Arial, sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 19px;
+  color: var(--basic-black);
+}
+.breadcrumbs__item:not(:last-child) {
+  margin-right: 40px;
+}
+.breadcrumbs__item:not(:last-child)::after {
+  content: '';
+  position: absolute;
+  background-repeat: no-repeat;
+  background-image: url(./img/arrow_nav.svg);
+  width: 12px;
+  height: 12px;
+  right: 20px;
+  right: -25px;
+  top: 4px;
+}
+.breadcrumbs__item--monopod {
+  opacity: 0.3;
+}
+.breadcrumbs__link {
+  color: var(--basic-black);
+  opacity: 0.3;
+}
+.breadcrumbs__link:hover,
+.breadcrumbs__link:focus {
+  opacity: 0.6;
+}
+.breadcrumbs__link:active {
+  opacity: 0.1;
+}
+.page-catalog__wrapper {
+  display: flex;
+  background-color: var(--basic-grey-light);
+}
+.filter__title {
+  background-color: var(--special-grey-medium);
+}
+.filter__form {
+  background-color: var(--basic-grey-light);
+}
+.page-catalog__sorting {
+  display: flex;
+  flex-direction: column;
+}
+.filter__container {
+  border-top: 2px solid var(--basic-black);
+}
+.filter__span-bold {
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 1px;
+}
+.filter__fieldset {
+  display: flex;
+  flex-direction: column;
+  border: none;
+}
+.filter__span-light {
+  font-family: "Open Sans", Arial, sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 19px;
+}
+.filter__label {
+  display: flex;
+  cursor: pointer;
+}
+.filter__input-checkbox + .filter__checkbox-indicator {
+  display: flex;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  background-image: url(./img/checkbox-off.svg);
+}
+.filter__input-checkbox:hover + .filter__checkbox-indicator,
+.filter__input-checkbox:focus + .filter__checkbox-indicator {
+  opacity: 0.6;
+}
+.filter__input-checkbox:disabled ~ span {
+  opacity: 0.25;
+}
+.filter__input-checkbox:disabled + .filter__checkbox-indicator {
+  opacity: 0.25;
+}
+.filter__input-checkbox:checked + .filter__checkbox-indicator::after {
+  content: "";
+  flex-shrink: 0;
+  display: block;
+  width: 13.54px;
+  height: 10.5px;
+  background-image: url("./img/Checked.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+  left: 5px;
+}
+.filter__input-radio + .filter__radio-indicator {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  border: 2px solid var(--basic-black);
+  border-radius: 50%;
+}
+.filter__input-radio:checked + .filter__radio-indicator::after {
+  content: "";
+  display: block;
+  width: 8px;
+  height: 8px;
+  background-color: var(--basic-black);
+  border-radius: 50%;
+}
+.filter__input-radio:hover + .filter__radio-indicator,
+.filter__input-radio:focus + .filter__radio-indicator {
+  opacity: 0.6;
+}
+.filter__input-radio:disabled ~ span {
+  opacity: 0.25;
+}
+.filter__input-radio:disabled + .filter__radio-indicator {
+  opacity: 0.25;
+}
+.sorting__container {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--basic-grey-light);
+}
+.sorting__list {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+}
+.sorting__link {
+  font-family: "Open Sans", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  color:var(--basic-black);
+  opacity: 0.3;
+}
+.sorting__link:hover,
+.sorting__link:focus {
+  opacity: 0.6;
+}
+.sorting__link:active {
+  opacity: 1;
+}
+.sorting__button {
+  width: 18px;
+  height: 18px;
+}
+.sorting__button--more {
+  background-image: url(./img/icon-up-dir.svg);
+  opacity: 0.3;
+}
+.sorting__button--less {
+  background-image: url(./img/icon-down-dir.svg);
+}
+.sorting__button:hover,
+.sorting__button:focus {
+opacity: 0.6;
+}
+.sorting__button:active {
+  opacity: 1;
+}
+.sorting__wrapper {
+  background-color: var(--basic-white);
+}
+.items__list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  list-style: none;
+}
+.items__item {
+  position: relative;
+}
+.items__item--new::before {
+  content: '';
+  position: absolute;
+  right: 27px;
+  top: 29px;
+  z-index: 2;
+  width: 62px;
+  height: 62px;
+  background-repeat: no-repeat;
+  background-image: url(./img/new-position.svg);
+}
+.items__link {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 2px;
+  color: var(--basic-black);
+}
+.items__span {
+  font-size: 16px;
+  line-height: 18px;
+  letter-spacing: 2px;
+}
+.items__button-compare {
+  font-family: "Open Sans", Arial, sans-serif;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 18px;
+  letter-spacing: 1px;
+  color: var(--basic-black);
+}
+.sorting__paginator {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--special-grey-light);
+}
+.paginator__link {
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: var(--basic-black);
+}
+.paginator__link:hover,
+.paginator__link:focus {
+  background-color: var(--special-grey-paginator);
+}
+.paginator__link:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+.paginator__list {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+}
+.paginator__link-numbers {
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 2px;
+  color: var(--basic-black);
+  opacity: 0.3;
+}
+.paginator__link-numbers:hover,
+.paginator__link-numbers:focus {
+  opacity: 0.6;
+}
+.paginator__link-numbers:active {
+  opacity: 1;
+}
+.footer-navigation__link {
+  line-height: 21px;
+  color: rgba(255, 255, 255, 0.7);
+}
+.footer-navigation__item--login {
+  position: relative;
+}
+.footer-navigation__item--login::before {
+  content: '';
+  position: absolute;
+  width: 13px;
+  height: 14px;
+  background-repeat: no-repeat;
+  background-image: url(./img/user-sp-yellow.svg);
 }
